datepicker bootstrap fix

--- a/templates/about.html
+++ b/templates/about.html
@@ -13,9 +13,6 @@
     <!-- Bootstrap core CSS -->
     <link href="/static/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
-    <link href="https://cdn.rawgit.com/mdehoog/Semantic-UI/6e6d051d47b598ebab05857545f242caf2b4b48c/dist/semantic.min.css"
-          rel="stylesheet" type="text/css"/>
-
     <!-- Custom fonts for this template -->
     <link href="/static/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
@@ -112,20 +109,6 @@
                 <h5 class="font-weight-bold mt-4 mb-3">Frank Kosarek</h5>
                 <p class="text-uppercase blue-text"><strong>Founder</strong></p>
                 <p class="grey-text">Porsche = life</p>
-                <ul class="list-unstyled mb-0">
-                    <!-- Facebook -->
-                    <a class="p-2 fa-lg fb-ic">
-                        <i class="fa fa-facebook blue-text"> </i>
-                    </a>
-                    <!-- Twitter -->
-                    <a class="p-2 fa-lg tw-ic">
-                        <i class="fa fa-twitter blue-text"> </i>
-                    </a>
-                    <!-- Instagram -->
-                    <a class="p-2 fa-lg ins-ic">
-                        <i class="fa fa-instagram blue-text"> </i>
-                    </a>
-                </ul>
             </div>
             <!-- Grid column -->
 
@@ -137,13 +120,7 @@
                 </div>
                 <h5 class="font-weight-bold mt-4 mb-3">Victor Fateh</h5>
                 <p class="text-uppercase blue-text"><strong>Co Founder</strong></p>
-                <p class="grey-text">Can only code within petting distance of a dog.</p>
-                <ul class="list-unstyled mb-0">
-                    <!-- Instagram -->
-                    <a class="p-2 fa-lg ins-ic" href="https://instagram.com">
-                        <i class="fa fa-instagram blue-text"></i>
-                    </a>
-                </ul>
+                <p class="grey-text">Must code within petting distance of dog.</p>
             </div>
             <!-- Grid column -->
 
