--- a/templates/error.html
+++ b/templates/error.html
@@ -254,7 +254,7 @@
         <br>
         <div class='_2'>LOOKS LIKE YOU'RE LOST</div>
         <br>
-        <a class='btn' href='/'>Go Home</a>
+        <a class='btn' href='/'>ET Go Home</a>
     </div>
     <footer class="container text-center">
         {{ description }}
