--- a/templates/contact.html
+++ b/templates/contact.html
@@ -13,9 +13,6 @@
     <!-- Bootstrap core CSS -->
     <link href="/static/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
-    <link href="https://cdn.rawgit.com/mdehoog/Semantic-UI/6e6d051d47b598ebab05857545f242caf2b4b48c/dist/semantic.min.css"
-          rel="stylesheet" type="text/css"/>
-
     <!-- Custom fonts for this template -->
     <link href="/static/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
@@ -143,37 +140,16 @@
             <div class="col-md-4 mb-5 mb-lg-0">
                 <h4 class="text-uppercase mb-4 text-white">Social</h4>
                 <ul class="list-inline mb-0">
-                    <!--<li class="list-inline-item">-->
-                        <!--<a class="btn btn-outline-light btn-social text-center rounded-circle" href="#">-->
-                            <!--<i class="fa fa-fw fa-facebook"></i>-->
-                        <!--</a>-->
-                    <!--</li>-->
-                    <!--<li class="list-inline-item">-->
-                        <!--<a class="btn btn-outline-light btn-social text-center rounded-circle" href="#">-->
-                            <!--<i class="fa fa-fw fa-google-plus"></i>-->
-                        <!--</a>-->
-                    <!--</li>-->
-                    <!--<li class="list-inline-item">-->
-                        <!--<a class="btn btn-outline-light btn-social text-center rounded-circle" href="#">-->
-                            <!--<i class="fa fa-fw fa-twitter"></i>-->
-                        <!--</a>-->
-                    <!--</li>-->
-                    <!--<li class="list-inline-item">-->
-                        <!--<a class="btn btn-outline-light btn-social text-center rounded-circle" href="#">-->
-                            <!--<i class="fa fa-fw fa-linkedin"></i>-->
-                        <!--</a>-->
-                    <!--</li>-->
-                    <!--<li class="list-inline-item">-->
-                        <!--<a class="btn btn-outline-light btn-social text-center rounded-circle" href="#">-->
-                            <!--<i class="fa fa-fw fa-dribbble"></i>-->
-                        <!--</a>-->
-                    <!--</li>-->
-                    <h6 class="lead mb-0 text-white">Coming soon</h6>
+                    <li class="list-inline-item">
+                        <a class="btn btn-outline-light btn-social text-center rounded-circle" target="_blank" href="https://www.linkedin.com/company/inspectx/">
+                            <i class="fa fa-fw fa-linkedin"></i>
+                        </a>
+                    </li>
                 </ul>
             </div>
             <div class="col-md-4">
                 <h4 class="text-uppercase mb-4 text-white">InspectX</h4>
-                <p class="lead mb-0">Making buying easier</p>
+                <p class="lead mb-0">It's finally easy to sell a car</p>
             </div>
         </div>
     </div>
