--- a/templates/index.html
+++ b/templates/index.html
@@ -8,14 +8,10 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>InspectX</title>
+    <title>Inspect-X</title>
 
     <!-- Bootstrap core CSS -->
     <link href="/static/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
-    <link href="https://cdn.rawgit.com/mdehoog/Semantic-UI/6e6d051d47b598ebab05857545f242caf2b4b48c/dist/semantic.min.css"
-          rel="stylesheet" type="text/css"/>
-
 
     <!-- Custom fonts for this template -->
     <link href="/static/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -31,9 +27,11 @@
 
     <link href="/static/css/animatedzebra.css" rel="stylesheet">
 
-    <link href="/static/vendor/datepicker/calendar.min.css" rel="stylesheet">
-
     <link rel="stylesheet" href="/static/css/gauge.css">
+
+    <link rel="stylesheet"
+          href="https://cdnjs.cloudflare.com/ajax/libs/tempusdominus-bootstrap-4/5.0.1/css/tempusdominus-bootstrap-4.min.css"/>
+
 
 </head>
 
@@ -113,23 +111,14 @@
                     <div class="control-group">
                         <div class="form-group controls mb-0 pb-2">
                             <br>
-                            <!--<select required class="form-control form-control-lg" id="car" rows="5" name="car"-->
-                            <!--required="required">-->
-                            <!--<option value="">Vehicle</option>-->
-                            <!--<option value="acura">Acura</option>-->
-                            <!--<option value="Audi">Audi</option>-->
-                            <!--<option value="BMW">BMW</option>-->
-                            <!--<option value="Ferrari">Ferrari</option>-->
-                            <!--<option value="Land Rover">Land Rover</option>-->
-                            <!--<option value="Mercedes-Benz">Mercedes-Benz</option>-->
-                            <!--<option value="Porsche">Porsche</option>-->
-                            <!--<option value="Toyota">Toyota</option>-->
-                            <!--<option value="Vintage porsche">Vintage Porsche</option>-->
-                            <!--</select>-->
-                            <select class="form-control-lg" name="car-years" id="car-years" required style="background-color: white;"></select>
-                            <select class="form-control-lg" name="car-makes" id="car-makes" required style="background-color: white;"></select>
-                            <select class="form-control-lg" name="car-models" id="car-models" required style="background-color: white;"></select>
-                            <select class="form-control-lg" name="car-model-trims" id="car-model-trims" required style="background-color: white;"></select>
+                            <select class="form-control-lg" name="car-years" id="car-years" required
+                                    style="background-color: white;"></select>
+                            <select class="form-control-lg" name="car-makes" id="car-makes" required
+                                    style="background-color: white;"></select>
+                            <select class="form-control-lg" name="car-models" id="car-models" required
+                                    style="background-color: white;"></select>
+                            <select class="form-control-lg" name="car-model-trims" id="car-model-trims" required
+                                    style="background-color: white;"></select>
                         </div>
                         <hr>
                     </div>
@@ -154,12 +143,13 @@
                         <hr>
                     </div>
                     <div class="control-group">
-                        <div class="form-group controls mb-0" id="datepicker">
-                            <div class="ui input icon" style="width: 100%; height: 3em;">
-                                <i class="calendar icon"></i>
-                                <input type="text" placeholder="Inspection Date" require="required" name="date"
-                                       autocomplete="off" id="date" style="">
-                                <br>
+                        <div class="form-group controls mb-0">
+                            <div class="row">
+                                <div class="col-lg-12">
+                                    <input type="text" class="form-control datetimepicker-input" id="date"
+                                           data-toggle="datetimepicker" data-target="#date" style="height: 2.8em;"
+                                           placeholder="Inspection date" name="date" autocomplete="off"/>
+                                </div>
                             </div>
                         </div>
                         <hr>
@@ -214,11 +204,11 @@
 <!-- Custom scripts for this template -->
 <script src="/static/js/freelancer.min.js"></script>
 
-<script src="{{ url_for('static', filename='vendor/datepicker/calendar.min.js') }}"></script>
-
 <script src="{{ url_for('static', filename='js/form.js') }}"></script>
 
-<script src="https://cdn.rawgit.com/mdehoog/Semantic-UI/6e6d051d47b598ebab05857545f242caf2b4b48c/dist/semantic.min.js"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
+<script type="text/javascript"
+        src="https://cdnjs.cloudflare.com/ajax/libs/tempusdominus-bootstrap-4/5.0.1/js/tempusdominus-bootstrap-4.min.js"></script>
 
 </body>
 
