Fixed landing page meta

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,10 +5,31 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-
+    <!-- HTML Meta Tags -->
     <title>Inspect-X</title>
+    <meta name="description"
+          content="Need help selling your car? Inspect-X provides an in depth 200 point mobile inspection as well as a complete vehicle valuation to make your life easier.">
+
+    <!-- Google / Search Engine Tags -->
+    <meta itemprop="name" content="Inspect-X">
+    <meta itemprop="description"
+          content="Need help selling your car? Inspect-X provides an in depth 200 point mobile inspection as well as a complete vehicle valuation to make your life easier.">
+    <meta itemprop="image" content="https://www.inspect-x.com/static/img/profile.png">
+
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://www.inspect-x.com">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Inspect-X">
+    <meta property="og:description"
+          content="Need help selling your car? Inspect-X provides an in depth 200 point mobile inspection as well as a complete vehicle valuation to make your life easier.">
+    <meta property="og:image" content="https://www.inspect-x.com/static/img/profile.png">
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Inspect-X">
+    <meta name="twitter:description"
+          content="Need help selling your car? Inspect-X provides an in depth 200 point mobile inspection as well as a complete vehicle valuation to make your life easier.">
+    <meta name="twitter:image" content="https://www.inspect-x.com/static/img/profile.png">
 
     <!-- Bootstrap core CSS -->
     <link href="/static/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
