Code cleanup, contact update, mail prep, meta descriptions

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -5,10 +5,31 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
 
     <title>Contact - InspectX</title>
+    <meta name="description"
+          content="Contact the InspectX team! We'll help you understand our service.">
+
+    <!-- Google / Search Engine Tags -->
+    <meta itemprop="name" content="Inspect-X">
+    <meta itemprop="description"
+          content="Need help selling your car? Inspect-X provides an in depth 200 point mobile inspection as well as a complete vehicle valuation to make your life easier.">
+    <meta itemprop="image" content="https://www.inspect-x.com/static/img/profile.png">
+
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://www.inspect-x.com">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Inspect-X">
+    <meta property="og:description"
+          content="Need help selling your car? Inspect-X provides an in depth 200 point mobile inspection as well as a complete vehicle valuation to make your life easier.">
+    <meta property="og:image" content="https://www.inspect-x.com/static/img/profile.png">
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Inspect-X">
+    <meta name="twitter:description"
+          content="Need help selling your car? Inspect-X provides an in depth 200 point mobile inspection as well as a complete vehicle valuation to make your life easier.">
+    <meta name="twitter:image" content="https://www.inspect-x.com/static/img/profile.png">
 
     <!-- Bootstrap core CSS -->
     <link href="/static/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -24,10 +45,6 @@
 
     <!-- Custom styles for this template -->
     <link href="/static/css/freelancer.min.css" rel="stylesheet">
-
-    <link href="/static/css/animatedsend.css" rel="stylesheet">
-
-    <link rel="stylesheet" href="/static/css/gauge.css">
 
 </head>
 
@@ -52,83 +69,33 @@
                     <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="/about">About</a>
                 </li>
                 <li class="active nav-item mx-0 mx-lg-1">
-                    <a class="active nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="/contact">Contact Us</a>
+                    <a class="active nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="/contact">Contact
+                        Us</a>
                 </li>
             </ul>
         </div>
     </div>
 </nav>
 
-<header class="masthead text-center">
+<section class="masthead">
     <div class="container">
-        <h2 class="font-weight-light mb-0">Any more questions?</h2>
         <br><br>
-        <h4><a class="mailto" href="mailto:frank@inspect-x.com">Email us</a></h4>
-        <!--<div class="row">-->
-            <!--<div class="col-lg-8 mx-auto">-->
-                <!--<form name="sentMessage" id="email-form" novalidate="novalidate">-->
-                    <!--<div class="control-group">-->
-                        <!--<div class="form-group floating-label-form-group controls mb-0 pb-2">-->
-                            <!--<label>Name</label>-->
-                            <!--<input class="form-control" id="name" name="name" type="text" placeholder="Name"-->
-                                   <!--required="required"-->
-                                   <!--data-validation-required-message="Please enter your name.">-->
-                        <!--</div>-->
-                    <!--</div>-->
-                    <!--<div class="control-group">-->
-                        <!--<div class="form-group floating-label-form-group controls mb-0 pb-2">-->
-                            <!--<label>Email Address</label>-->
-                            <!--<input class="form-control" id="email" name="email" type="email" placeholder="Email Address"-->
-                                   <!--required="required"-->
-                                   <!--data-validation-required-message="Please enter your email address.">-->
-                        <!--</div>-->
-                    <!--</div>-->
-                    <!--<div class="control-group">-->
-                        <!--<div class="form-group floating-label-form-group controls mb-0 pb-2">-->
-                            <!--<label>Phone Number</label>-->
-                            <!--<input class="form-control" id="phone" name="phone" type="tel" placeholder="Phone Number"-->
-                                   <!--required="required"-->
-                                   <!--data-validation-required-message="Please enter your phone number.">-->
-                        <!--</div>-->
-                    <!--</div>-->
-                    <!--<div class="control-group">-->
-                        <!--<div class="form-group floating-label-form-group controls mb-0 pb-2">-->
-                            <!--<label>Message</label>-->
-                            <!--<textarea class="form-control" id="message" name="message" rows="5" placeholder="Message"-->
-                                      <!--required="required"-->
-                                      <!--data-validation-required-message="Please enter a message."></textarea>-->
-                        <!--</div>-->
-                    <!--</div>-->
-                    <!--<br>-->
-                    <!--<div class="form-group text-center">-->
-                        <!--<button type="submit" class="btn btn-primary btn-xl" style="color: black;"-->
-                                <!--id="sendMessageButton">Send-->
-                        <!--</button>-->
-                    <!--</div>-->
-                <!--</form>-->
-                <!--<div id="success" class="alert alert-success text-center" role="alert" style="display:none;"></div>-->
-                <!--<div class="loading-window" id="car-animation" style="display: none;">-->
-                    <!--<div class="car">-->
-                        <!--<div class="strike"></div>-->
-                        <!--<div class="strike strike2"></div>-->
-                        <!--<div class="strike strike3"></div>-->
-                        <!--<div class="strike strike4"></div>-->
-                        <!--<div class="strike strike5"></div>-->
-                        <!--<div class="car-detail spoiler"></div>-->
-                        <!--<div class="car-detail back"></div>-->
-                        <!--<div class="car-detail center"></div>-->
-                        <!--<div class="car-detail center1"></div>-->
-                        <!--<div class="car-detail front"></div>-->
-                        <!--<div class="car-detail wheel"></div>-->
-                        <!--<div class="car-detail wheel wheel2"></div>-->
-                    <!--</div>-->
-                <!--</div>-->
-                <!--<br>-->
-                <!--<div id="fail" class="alert alert-danger" role="alert" style="display:none;"></div>-->
-            <!--</div>-->
-        <!--</div>-->
+        <h2 class="text-center text-uppercase">Need more help?</h2>
+        <br>
+        <hr class="mb-5">
+        <br><br><br>
+        <div class="row text-center">
+            <div class="col-lg-4 ml-auto">
+                <h4><a class="mailto" href="mailto:engineering@inspect-x.com">Technical Support</a></h4>
+            </div>
+            <br><br><br><br>
+            <div class="col-lg-4 mr-auto">
+                <h4><a class="mailto" href="mailto:help@inspect-x.com">Customer Support</a></h4>
+            </div>
+        </div>
+        <br>
     </div>
-</header>
+</section>
 
 <footer class="footer text-center">
     <div class="container">
@@ -141,7 +108,8 @@
                 <h4 class="text-uppercase mb-4 text-white">Social</h4>
                 <ul class="list-inline mb-0">
                     <li class="list-inline-item">
-                        <a class="btn btn-outline-light btn-social text-center rounded-circle" target="_blank" href="https://www.linkedin.com/company/inspectx/">
+                        <a class="btn btn-outline-light btn-social text-center rounded-circle" target="_blank"
+                           href="https://www.linkedin.com/company/inspectx/">
                             <i class="fa fa-fw fa-linkedin"></i>
                         </a>
                     </li>
