--- a/templates/value.html
+++ b/templates/value.html
@@ -5,10 +5,31 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
 
     <title>Value - InspectX</title>
+    <meta name="description"
+          content="InspectX helps you find the exact value for your vehicle. We'll tell you where, how and for how much to sell your car.">
+
+    <!-- Google / Search Engine Tags -->
+    <meta itemprop="name" content="Inspect-X">
+    <meta itemprop="description"
+          content="Need help selling your car? Inspect-X provides an in depth 200 point mobile inspection as well as a complete vehicle valuation to make your life easier.">
+    <meta itemprop="image" content="https://www.inspect-x.com/static/img/profile.png">
+
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://www.inspect-x.com">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Inspect-X">
+    <meta property="og:description"
+          content="Need help selling your car? Inspect-X provides an in depth 200 point mobile inspection as well as a complete vehicle valuation to make your life easier.">
+    <meta property="og:image" content="https://www.inspect-x.com/static/img/profile.png">
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Inspect-X">
+    <meta name="twitter:description"
+          content="Need help selling your car? Inspect-X provides an in depth 200 point mobile inspection as well as a complete vehicle valuation to make your life easier.">
+    <meta name="twitter:image" content="https://www.inspect-x.com/static/img/profile.png">
 
     <!-- Bootstrap core CSS -->
     <link href="/static/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -70,7 +91,8 @@
             <div class="col-lg-2"></div>
             <div class="col-lg-8 ml-auto text-center">
                 <p class="lead">Kelley Blue Book only values an average example of your car.</p>
-                <h3>We don’t stop
+                <br>
+                <h3 style="color: #A3CCA5">We don’t stop
                     there.</h3>
                 <p class="lead"><br>We’ll
                     tell you exactly what your particular car is worth, taking into account its options and mechanical
