--- a/templates/about.html
+++ b/templates/about.html
@@ -5,10 +5,31 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
 
     <title>About - InspectX</title>
+    <meta name="description"
+          content="Preparing your car to sell has never been easier. InspectX will give you the information you need to make the most out of selling your car private party!">
+
+    <!-- Google / Search Engine Tags -->
+    <meta itemprop="name" content="Inspect-X">
+    <meta itemprop="description"
+          content="Need help selling your car? Inspect-X provides an in depth 200 point mobile inspection as well as a complete vehicle valuation to make your life easier.">
+    <meta itemprop="image" content="https://www.inspect-x.com/static/img/profile.png">
+
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://www.inspect-x.com">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Inspect-X">
+    <meta property="og:description"
+          content="Need help selling your car? Inspect-X provides an in depth 200 point mobile inspection as well as a complete vehicle valuation to make your life easier.">
+    <meta property="og:image" content="https://www.inspect-x.com/static/img/profile.png">
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Inspect-X">
+    <meta name="twitter:description"
+          content="Need help selling your car? Inspect-X provides an in depth 200 point mobile inspection as well as a complete vehicle valuation to make your life easier.">
+    <meta name="twitter:image" content="https://www.inspect-x.com/static/img/profile.png">
 
     <!-- Bootstrap core CSS -->
     <link href="/static/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -57,13 +78,16 @@
 
 <section class="masthead bg-primary">
     <div class="container">
-        <br><br><br>
+        <br><br>
         <h2 class="text-center text-uppercase">The Inspection</h2>
+        <br>
         <hr class="mb-5">
         <div class="row">
             <div class="col-lg-12 ml-auto text-left">
-                <p class="lead">Our 200-point inspection checklist is the best in the business. <br>Our technicians are the
-                    best in the business. <br>The result? <br>The best mechanical and cosmetic inspection available anywhere.
+                <p class="lead">Our 200-point inspection checklist is the best in the business. <br>Our technicians are
+                    the
+                    best in the business. <br>The result? <br>The best mechanical and cosmetic inspection available
+                    anywhere.
                     Get the exact checklist below!</p>
             </div>
         </div>
@@ -78,15 +102,14 @@
 
 <section style="background-color: #2E4050;">
     <div class="container">
-        <h2 class="text-center text-uppercase text-white">The Mechanics</h2>
+        <h2 class="text-center text-uppercase text-white">How we work</h2>
         <hr class="mb-5" style="background-color: white;">
         <div class="row text-white">
             <div class="col-lg-12 ml-auto text-left">
-                <p class="lead">We give you on-demand access to the best technicians in the auto industry. Each inspectX
-                    technician has over 5 years of brand-specific experience at a dealership or independent shop.
-                    <br><br>
-                    All of that means that our mobile techs are the best way to get the need-to-know on any car you’re
-                    buying or selling.</p>
+                <video class="embed-responsive embed-responsive-16by9" controls
+                       onclick="this.paused ? this.play() : this.pause();">
+                    <source class="embed-responsive-item" src="/static/img/info-vid.mp4" type="video/mp4">
+                </video>
             </div>
         </div>
     </div>
