--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,6 @@
 <head>
 
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- HTML Meta Tags -->
     <title>Inspect-X</title>
     <meta name="description"
@@ -39,9 +38,6 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet"
           type="text/css">
-
-    <!-- Plugin CSS -->
-    <link href="/static/vendor/magnific-popup/magnific-popup.css" rel="stylesheet" type="text/css">
 
     <!-- Custom styles for this template -->
     <link href="/static/css/freelancer.min.css" rel="stylesheet">
@@ -102,7 +98,6 @@
         <h2 class="text-center text-uppercase text-secondary mb-0" id="title-start">Interested?</h2>
         <h2 class="text-center text-uppercase text-secondary mb-0" id="title-complete" style="display: none;">All
             set!</h2>
-        <h2 class="text-center text-uppercase text-secondary mb-0" id="title-error" style="display: none;">oops</h2>
         <br><br>
         <div class="row">
             <div class="col-lg-8 mx-auto">
@@ -184,7 +179,7 @@
                     </div>
                 </form>
                 <div id="successAlert" class="alert alert-success text-center" role="alert" style="display:none;"></div>
-                <div id="errorAlert" class="alert alert-danger" role="alert" style="display:none;"></div>
+                <div id="errorAlert" class="alert alert-danger text-center" role="alert" style="display:none;"></div>
                 <div class="scene text-center" id="scene" style="display:none;">
                     <img class="car" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/43033/car.svg" alt=""/>
                     <img class="poof" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/43033/poof.svg" alt=""/>
@@ -225,11 +220,12 @@
 <!-- Custom scripts for this template -->
 <script src="/static/js/freelancer.min.js"></script>
 
-<script src="{{ url_for('static', filename='js/form.js') }}"></script>
-
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
 <script type="text/javascript"
         src="https://cdnjs.cloudflare.com/ajax/libs/tempusdominus-bootstrap-4/5.0.1/js/tempusdominus-bootstrap-4.min.js"></script>
+
+<script src="{{ url_for('static', filename='js/form.js') }}"></script>
+
 
 </body>
 
