Migration to GAE Standard

--- a/templates/index.html
+++ b/templates/index.html
@@ -200,7 +200,7 @@
 <script src="/static/vendor/jquery/jquery.min.js"></script>
 <script src="/static/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
-<script type="text/javascript" src="https://www.carqueryapi.com/js/carquery.0.3.4.js"></script>
+<script async type="text/javascript" src="https://www.carqueryapi.com/js/carquery.0.3.4.js"></script>
 
 <!-- Plugin JavaScript -->
 <script src="/static/vendor/jquery-easing/jquery.easing.min.js"></script>
